[package]
name = "embedded-counters"
description = "Performance counters for embedded driver benchmarking"
version = "0.1.2"
authors = ["Ales Katona <ales@katona.me>"]
repository = "https://github.com/almindor/embedded-counters"
documentation = "https://docs.rs/embedded-counters"
keywords = ["graphics", "display", "embedded", "drivers"]
readme = "README.md"
license = "MIT OR Apache-2.0"
exclude = [
	".gitignore",
]
edition = "2018"

[[example]]
name = "st7789"
path = "examples/st7789.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
display-interface = "0.4"
embedded-hal = "0.2"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
embedded-graphics = "0.7"
serde_json = "1.0"
st7789 = "0.6"